--- a/Echse.Net.Lidgren.CLI/Echse.Net.Lidgren.CLI.csproj
+++ b/Echse.Net.Lidgren.CLI/Echse.Net.Lidgren.CLI.csproj
@@ -6,15 +6,11 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Lidgren.Network.Core2" Version="1.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\Echse.Net.Domain\Echse.Net.Domain.csproj" />
       <ProjectReference Include="..\Echse.Net.Infrastructure.Lidgren\Echse.Net.Infrastructure.Lidgren.csproj" />
       <ProjectReference Include="..\Echse.Net.Serialization.MsgPack\Echse.Net.Serialization.MsgPack.csproj" />
       <ProjectReference Include="..\Echse.Net.Serialization.Yaml\Echse.Net.Serialization.Yaml.csproj" />
-      <ProjectReference Include="..\echse\Echse.Language\Echse.Language.csproj" />
+      <ProjectReference Include="..\echse\Echse.Domain\Echse.Domain.csproj" />
     </ItemGroup>
 
 </Project>
