--- a/Echse.Console/Echse.Console.csproj
+++ b/Echse.Console/Echse.Console.csproj
@@ -6,6 +6,12 @@
     <ProjectReference Include="..\Echse.Net.Infrastructure\Echse.Net.Infrastructure.csproj" />
     <ProjectReference Include="..\Echse.Net.Serialization\Echse.Net.Serialization.csproj" />
     <ProjectReference Include="..\Echse.Net.Serialization.MsgPack\Echse.Net.Serialization.MsgPack.csproj" />
+    <ProjectReference Include="..\Echse.Net.Infrastructure.Lidgren\Echse.Net.Infrastructure.Lidgren.csproj" />
+    <ProjectReference Include="..\Echse.Net.Domain.Lidgren\Echse.Net.Domain.Lidgren.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Lidgren.Network.Core2" Version="1.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
